--- a/lib/ts-lambdas/package.json
+++ b/lib/ts-lambdas/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.257.0",
-    "@aws-sdk/lib-dynamodb": "3.257.0"
+    "@aws-sdk/lib-dynamodb": "3.257.0",
+    "csv": "6.2.8",
+    "dayjs": "1.11.7"
   }
 }
