--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.2.5",
     "@types/node": "18.11.18",
+    "aws-cdk": "2.62.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "aws-cdk": "2.62.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.294.0",
     "aws-cdk-lib": "2.62.0",
     "constructs": "^10.0.0",
+    "csv": "6.2.8",
+    "dayjs": "1.11.7",
     "source-map-support": "^0.5.21"
   }
 }
